set a 23 enigma timeout at RegexMatcher, fdo#70627

Change-Id: I390bfec0d36dcc9529785e97994dad2b0704dc80
(cherry picked from commit d838ea200e7d6060d4a759616f9e1fcbf3c36c8e)